1.5/_sources/modules/generated/sklearn.feature_extraction.text.TfidfTransformer.rst.txt
TfidfTransformer
================

.. currentmodule:: sklearn.feature_extraction.text

.. autoclass:: TfidfTransformer
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_extraction.text.TfidfTransformer sklearn.feature_extraction.text.TfidfTransformer.__init__ sklearn.feature_extraction.text.TfidfTransformer.fit sklearn.feature_extraction.text.TfidfTransformer.fit_transform sklearn.feature_extraction.text.TfidfTransformer.get_feature_names_out sklearn.feature_extraction.text.TfidfTransformer.get_metadata_routing sklearn.feature_extraction.text.TfidfTransformer.get_params sklearn.feature_extraction.text.TfidfTransformer.set_output sklearn.feature_extraction.text.TfidfTransformer.set_params sklearn.feature_extraction.text.TfidfTransformer.set_transform_request sklearn.feature_extraction.text.TfidfTransformer.transform 
   :add-heading: Gallery examples
   :heading-level: -