1.7/_sources/modules/generated/sklearn.feature_extraction.text.TfidfTransformer.rst.txt
TfidfTransformer
================

.. currentmodule:: sklearn.feature_extraction.text

.. autoclass:: TfidfTransformer
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_extraction.text.TfidfTransformer sklearn.feature_extraction.text.TfidfTransformer.__delattr__ sklearn.feature_extraction.text.TfidfTransformer.__dir__ sklearn.feature_extraction.text.TfidfTransformer.__eq__ sklearn.feature_extraction.text.TfidfTransformer.__format__ sklearn.feature_extraction.text.TfidfTransformer.__ge__ sklearn.feature_extraction.text.TfidfTransformer.__getattribute__ sklearn.feature_extraction.text.TfidfTransformer.__getstate__ sklearn.feature_extraction.text.TfidfTransformer.__gt__ sklearn.feature_extraction.text.TfidfTransformer.__hash__ sklearn.feature_extraction.text.TfidfTransformer.__init__ sklearn.feature_extraction.text.TfidfTransformer.__init_subclass__ sklearn.feature_extraction.text.TfidfTransformer.__le__ sklearn.feature_extraction.text.TfidfTransformer.__lt__ sklearn.feature_extraction.text.TfidfTransformer.__ne__ sklearn.feature_extraction.text.TfidfTransformer.__new__ sklearn.feature_extraction.text.TfidfTransformer.__reduce__ sklearn.feature_extraction.text.TfidfTransformer.__reduce_ex__ sklearn.feature_extraction.text.TfidfTransformer.__repr__ sklearn.feature_extraction.text.TfidfTransformer.__setattr__ sklearn.feature_extraction.text.TfidfTransformer.__setstate__ sklearn.feature_extraction.text.TfidfTransformer.__sizeof__ sklearn.feature_extraction.text.TfidfTransformer.__sklearn_clone__ sklearn.feature_extraction.text.TfidfTransformer.__sklearn_tags__ sklearn.feature_extraction.text.TfidfTransformer.__str__ sklearn.feature_extraction.text.TfidfTransformer.__subclasshook__ sklearn.feature_extraction.text.TfidfTransformer._build_request_for_signature sklearn.feature_extraction.text.TfidfTransformer._get_default_requests sklearn.feature_extraction.text.TfidfTransformer._get_doc_link sklearn.feature_extraction.text.TfidfTransformer._get_metadata_request sklearn.feature_extraction.text.TfidfTransformer._get_param_names sklearn.feature_extraction.text.TfidfTransformer._get_params_html sklearn.feature_extraction.text.TfidfTransformer._html_repr sklearn.feature_extraction.text.TfidfTransformer._repr_html_inner sklearn.feature_extraction.text.TfidfTransformer._repr_mimebundle_ sklearn.feature_extraction.text.TfidfTransformer._validate_params sklearn.feature_extraction.text.TfidfTransformer.fit sklearn.feature_extraction.text.TfidfTransformer.fit_transform sklearn.feature_extraction.text.TfidfTransformer.get_feature_names_out sklearn.feature_extraction.text.TfidfTransformer.get_metadata_routing sklearn.feature_extraction.text.TfidfTransformer.get_params sklearn.feature_extraction.text.TfidfTransformer.set_output sklearn.feature_extraction.text.TfidfTransformer.set_params sklearn.feature_extraction.text.TfidfTransformer.set_transform_request sklearn.feature_extraction.text.TfidfTransformer.transform 
   :add-heading: Gallery examples
   :heading-level: -